bg only on guess page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,8 +1,16 @@
 body { 
-  background-image: image-url('polkadots.jpg'); 
   font-size: 20px;
   font-family: sans-serif;
   font-variant: small-caps;
+}
+
+.guess-bg {
+  background-image: image-url('polkadots.jpg');
+}
+
+.all-bg {
+background-image: image-url('white.jpg');
+	
 }
 
 .navbar .navbar-brand {
