new colors on date chart

--- a/app/views/guesses/all_guesses.html.erb
+++ b/app/views/guesses/all_guesses.html.erb
@@ -26,7 +26,9 @@
 		<div class='col-md-4 pie-chart'>
 			<h3 align="center">Date</h3>
 			<%= pie_chart Guess.group(:date).count,
-				colors: ["#F781BE", "#819FF7", "#F78181", "#BE81F7", "#58FAAC", "#F3F781", "#F781F3", "81F7F3", "#FAAC58"] %>
+				colors: ["#F781BE", "#819FF7", "#F78181", "#BE81F7", "#58FAAC", "#F3F781", "#F781F3", "#81F7F3", "#FAAC58", "#64FE2E", "#0080FF", "#BCF5A9", "#F5BCA9",
+				"#E3CEF6", "#CEF6EC", "#F2F5A9", "#FF8000", "#04B4AE", "#FF0040", "#0000FF",
+				"#5F04B4", "#04B431", "#DF7401", "#D7DF01", "#F5A9BC", "#04B486", "#0080FF"] %>
 		</div>
 		<div class='col-md-4 pie-chart'>
 			<h3 align="center">Species</h3>
